--- a/ui/mycontroller.ui
+++ b/ui/mycontroller.ui
@@ -451,6 +451,24 @@
         <string>0</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>270</y>
+         <width>31</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>a</string>
+       </property>
+      </widget>
      </widget>
     </item>
     <item>
@@ -479,7 +497,7 @@
        <property name="geometry">
         <rect>
          <x>40</x>
-         <y>80</y>
+         <y>50</y>
          <width>21</width>
          <height>21</height>
         </rect>
@@ -503,7 +521,7 @@
        <property name="geometry">
         <rect>
          <x>35</x>
-         <y>53</y>
+         <y>23</y>
          <width>141</width>
          <height>21</height>
         </rect>
@@ -521,7 +539,7 @@
        <property name="geometry">
         <rect>
          <x>199</x>
-         <y>80</y>
+         <y>50</y>
          <width>21</width>
          <height>21</height>
         </rect>
@@ -542,7 +560,7 @@
        <property name="geometry">
         <rect>
          <x>210</x>
-         <y>54</y>
+         <y>24</y>
          <width>131</width>
          <height>21</height>
         </rect>
@@ -560,7 +578,7 @@
        <property name="geometry">
         <rect>
          <x>229</x>
-         <y>80</y>
+         <y>50</y>
          <width>71</width>
          <height>23</height>
         </rect>
@@ -573,7 +591,7 @@
        <property name="geometry">
         <rect>
          <x>70</x>
-         <y>80</y>
+         <y>50</y>
          <width>71</width>
          <height>23</height>
         </rect>
@@ -582,6 +600,133 @@
         <string>Задать</string>
        </property>
       </widget>
+      <widget class="QLineEdit" name="xAngleEdit">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>100</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="yAngleEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>100</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="zAngleEdit">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>100</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_16">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>74</y>
+         <width>211</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Поворот камеры (в градусах)</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_18">
+       <property name="geometry">
+        <rect>
+         <x>8</x>
+         <y>99</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Ox</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_19">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>99</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Oz</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_20">
+       <property name="geometry">
+        <rect>
+         <x>108</x>
+         <y>99</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Oy</string>
+       </property>
+      </widget>
+      <zorder>visorlabel</zorder>
+      <zorder>label_13</zorder>
+      <zorder>fonlabel</zorder>
+      <zorder>label_15</zorder>
+      <zorder>foncolorButton</zorder>
+      <zorder>visorcolorButton</zorder>
+      <zorder>yAngleEdit</zorder>
+      <zorder>zAngleEdit</zorder>
+      <zorder>xAngleEdit</zorder>
+      <zorder>xAngleEdit</zorder>
+      <zorder>yAngleEdit</zorder>
+      <zorder>zAngleEdit</zorder>
+      <zorder>label_16</zorder>
+      <zorder>label_18</zorder>
+      <zorder>label_19</zorder>
+      <zorder>label_20</zorder>
      </widget>
     </item>
     <item>
