--- a/ui/mycontroller.ui
+++ b/ui/mycontroller.ui
@@ -476,13 +476,13 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>0</height>
+        <height>170</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>130</height>
+        <height>500</height>
        </size>
       </property>
       <property name="font">
@@ -532,10 +532,10 @@
         </font>
        </property>
        <property name="text">
-        <string>Цвет наблюдателя</string>
+        <string>Хрень</string>
        </property>
       </widget>
-      <widget class="QLabel" name="fonlabel">
+      <widget class="QLabel" name="lightlabel">
        <property name="geometry">
         <rect>
          <x>199</x>
@@ -571,10 +571,10 @@
         </font>
        </property>
        <property name="text">
-        <string>Цвет фона</string>
+        <string>Цвет света</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="foncolorButton">
+      <widget class="QPushButton" name="lightcolorButton">
        <property name="geometry">
         <rect>
          <x>229</x>
@@ -711,11 +711,122 @@
         <string>Oy</string>
        </property>
       </widget>
+      <widget class="QLineEdit" name="zLightEdit">
+       <property name="geometry">
+        <rect>
+         <x>240</x>
+         <y>143</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_21">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>121</y>
+         <width>211</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Вектор направления света</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="xLightEdit">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>143</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_22">
+       <property name="geometry">
+        <rect>
+         <x>108</x>
+         <y>142</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>y</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="yLightEdit">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>143</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_23">
+       <property name="geometry">
+        <rect>
+         <x>8</x>
+         <y>142</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>x</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_24">
+       <property name="geometry">
+        <rect>
+         <x>210</x>
+         <y>142</y>
+         <width>21</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>z</string>
+       </property>
+      </widget>
       <zorder>visorlabel</zorder>
       <zorder>label_13</zorder>
-      <zorder>fonlabel</zorder>
+      <zorder>lightlabel</zorder>
       <zorder>label_15</zorder>
-      <zorder>foncolorButton</zorder>
+      <zorder>lightcolorButton</zorder>
       <zorder>visorcolorButton</zorder>
       <zorder>yAngleEdit</zorder>
       <zorder>zAngleEdit</zorder>
@@ -727,6 +838,13 @@
       <zorder>label_18</zorder>
       <zorder>label_19</zorder>
       <zorder>label_20</zorder>
+      <zorder>zLightEdit</zorder>
+      <zorder>label_21</zorder>
+      <zorder>xLightEdit</zorder>
+      <zorder>label_22</zorder>
+      <zorder>yLightEdit</zorder>
+      <zorder>label_23</zorder>
+      <zorder>label_24</zorder>
      </widget>
     </item>
     <item>
