--- a/ui/mycontroller.ui
+++ b/ui/mycontroller.ui
@@ -269,7 +269,7 @@
        <property name="geometry">
         <rect>
          <x>229</x>
-         <y>29</y>
+         <y>27</y>
          <width>31</width>
          <height>21</height>
         </rect>
@@ -469,6 +469,145 @@
         <string>a</string>
        </property>
       </widget>
+      <widget class="QGroupBox" name="groupBox_6">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>90</y>
+         <width>151</width>
+         <height>80</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>Количество потоков</string>
+       </property>
+       <widget class="QRadioButton" name="thread1radioButton">
+        <property name="geometry">
+         <rect>
+          <x>18</x>
+          <y>27</y>
+          <width>41</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>1</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="thread2radioButton">
+        <property name="geometry">
+         <rect>
+          <x>18</x>
+          <y>47</y>
+          <width>41</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>2</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="thread4radioButton">
+        <property name="geometry">
+         <rect>
+          <x>98</x>
+          <y>27</y>
+          <width>41</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>4</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="thread8radioButton">
+        <property name="geometry">
+         <rect>
+          <x>98</x>
+          <y>47</y>
+          <width>41</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>8</string>
+        </property>
+       </widget>
+       <widget class="QRadioButton" name="thread3radioButton">
+        <property name="geometry">
+         <rect>
+          <x>60</x>
+          <y>37</y>
+          <width>41</width>
+          <height>20</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>3</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QGroupBox" name="groupBox_5">
+       <property name="geometry">
+        <rect>
+         <x>340</x>
+         <y>0</y>
+         <width>151</width>
+         <height>80</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>4-я координата</string>
+       </property>
+       <widget class="QCheckBox" name="colorModecheckBox">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>43</y>
+          <width>141</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>отображение
+цвета</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QLabel" name="label_13">
+       <property name="geometry">
+        <rect>
+         <x>363</x>
+         <y>21</y>
+         <width>31</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>11</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>w</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="wEdit">
+       <property name="geometry">
+        <rect>
+         <x>400</x>
+         <y>22</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
      </widget>
     </item>
     <item>
@@ -476,13 +615,13 @@
       <property name="minimumSize">
        <size>
         <width>0</width>
-        <height>170</height>
+        <height>200</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>500</height>
+        <height>550</height>
        </size>
       </property>
       <property name="font">
@@ -758,7 +897,7 @@ p, li { white-space: pre-wrap; }
          <x>313</x>
          <y>24</y>
          <width>20</width>
-         <height>161</height>
+         <height>151</height>
         </rect>
        </property>
        <property name="orientation">
@@ -817,7 +956,7 @@ p, li { white-space: pre-wrap; }
         </rect>
        </property>
        <property name="title">
-        <string>Разрешение</string>
+        <string>Масштаб</string>
        </property>
        <widget class="QRadioButton" name="resolution16radioButton">
         <property name="geometry">
@@ -830,6 +969,9 @@ p, li { white-space: pre-wrap; }
         </property>
         <property name="text">
          <string>1:16</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
        <widget class="QRadioButton" name="resolution9radioButton">
@@ -898,6 +1040,37 @@ p, li { white-space: pre-wrap; }
         <string>Предпросмотр</string>
        </property>
       </widget>
+      <widget class="QLabel" name="label_25">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>175</y>
+         <width>101</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Радиус сферы</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="radSphereEdit">
+       <property name="geometry">
+        <rect>
+         <x>420</x>
+         <y>175</y>
+         <width>61</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>0</string>
+       </property>
+      </widget>
      </widget>
     </item>
     <item>
@@ -934,6 +1107,11 @@ p, li { white-space: pre-wrap; }
        <item>
         <property name="text">
          <string>q^2 + k</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>1/q^2 + k</string>
         </property>
        </item>
       </widget>
